# kpath-generator

./: LICENSE  README.md  pyproject.toml
kpath_generator/: cli.py
kpath_generator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
